# sast-readium-web

./: .gitignore  .prettierignore  .prettierrc.json  .windsurfrules  AGENTS.md  CI_CD.md  CLAUDE.md  GEMINI.md  README.md  README_zh.md  TESTING.md  WARP.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  mkdocs.yml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
.claude/: settings.local.json
.github/: copilot-instructions.md
__mocks__/: nanoid.js  pdfjs-mock.js  pkce-challenge.js  react-markdown.js  rehype-katex.js  rehype-raw.js  remark-gfm.js  remark-math.js  shiki.js  use-stick-to-bottom.js
app/: globals.css  layout.tsx  page.test.tsx  page.tsx
components/: language-switcher.tsx  splash-screen.tsx  theme-manager.tsx
e2e/: help-page.spec.ts
hooks/: use-ai-chat.test.ts  use-ai-chat.ts  use-ai-media.test.ts  use-ai-media.ts  use-chart-insight.test.ts  use-chart-insight.ts  use-deep-research.test.ts  use-deep-research.ts  use-device-orientation.test.ts  use-device-orientation.ts  use-markdown-ai.ts  use-pdf-context.test.ts  use-pdf-context.ts  use-report-template.test.ts  use-report-template.ts  use-touch-gestures.test.ts  use-touch-gestures.ts  use-tts.test.ts  use-tts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: ai_keys.rs  ai_proxy.rs  ai_usage.rs  file_ops.rs  mod.rs  system.rs
src-tauri/src/commands/mcp/: client.rs  commands.rs  import_export.rs  mod.rs  presets.rs  process.rs  storage.rs  types.rs
(+494 files in other folders)
